@@ -28,6 +28,7 @@ Bugs fixed
 - Bug 2450 - LogDistancePropagationLossModel is not continuous
 - Bug 2492 - uan: Make use of RxGain attribute in UanPhyGen class
 - Bug 2511 - HT Greenfield is not working
+- Bug 2513 - ParetoRandomVariable needs a "scale", not a "mean" attribute.
 - Bug 2521 - Include ipv6-option.h in wscript
 - Bug 2527 - PrintRoutingTable extended to add an optional Time::Units parameter
 - Bug 2530 - Rename aodv::SetBalckListTimeout to aodv::SetBlackListTimeout
